--- a/src/Infrastructure/IMS.Infrastructure/IMS.Infrastructure.csproj
+++ b/src/Infrastructure/IMS.Infrastructure/IMS.Infrastructure.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\IMS.Domain\IMS.Domain.csproj" />
-    <ProjectReference Include="..\IMS.Application\IMS.Application.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\IMS.Application\IMS.Application.csproj" />
+    <ProjectReference Include="..\..\Core\IMS.Domain\IMS.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
