Some Unit Tests for the Domain Layer

--- a/tests/IMS.UnitTests/IMS.UnitTests.csproj
+++ b/tests/IMS.UnitTests/IMS.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -18,6 +18,10 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Core\IMS.Domain\IMS.Domain.csproj" />
   </ItemGroup>
 
 </Project>
