View Model Unit Tests

--- a/src/Presentation/IMS.App/IMS.Presentation.csproj
+++ b/src/Presentation/IMS.App/IMS.Presentation.csproj
@@ -36,4 +36,8 @@
     <Folder Include="Views\" />
   </ItemGroup>
 
+
+	<ItemGroup>
+		<InternalsVisibleTo Include="IMS.UITests" />
+	</ItemGroup>
 </Project>
