--- a/tests/IMS.IntegrationTests/IMS.IntegrationTests.csproj
+++ b/tests/IMS.IntegrationTests/IMS.IntegrationTests.csproj
@@ -14,6 +14,14 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+	  <PackageReference Include="Testcontainers" Version="3.4.0" />
+	  <PackageReference Include="Testcontainers.MsSql" Version="3.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Core\IMS.Application\IMS.Application.csproj" />
+    <ProjectReference Include="..\..\src\Core\IMS.Domain\IMS.Domain.csproj" />
+    <ProjectReference Include="..\..\src\Infrastructure\IMS.Infrastructure\IMS.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
